syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.halo.api.grpc.greet";
option java_outer_classname = "GreeterGrpcProto";

package greet;

service GreeterGrpc {
  rpc SayHello (GreetRequest) returns (GreetReply) {}
}

message GreetRequest {
  string name = 1;
}

message GreetReply {
  string message = 1;
}